--- a/app/src/main/res/layout/list_mobile.xml
+++ b/app/src/main/res/layout/list_mobile.xml
@@ -21,14 +21,12 @@
             android:layout_height="wrap_content"
             android:background="@android:color/white"
             android:orientation="horizontal"
-            android:padding="@dimen/dp_8"
-            android:weightSum="10">
+            android:padding="@dimen/dp_8">
 
             <ImageView
                 android:id="@+id/ivMobileImage"
-                android:layout_width="wrap_content"
+                android:layout_width="@dimen/dp_80"
                 android:layout_height="match_parent"
-                android:layout_weight="7"
                 android:scaleType="centerCrop"
                 android:src="@drawable/mobile" />
 
@@ -36,8 +34,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/dp_8"
-                android:layout_marginStart="@dimen/dp_8"
-                android:layout_weight="3">
+                android:layout_marginStart="@dimen/dp_8">
 
                 <TextView
                     android:id="@+id/tvMobileName"
