--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,5 @@
     <dimen name="dp_8">8dp</dimen>
     <dimen name="sp_20">20sp</dimen>
     <dimen name="dp_2">2dp</dimen>
+    <dimen name="dp_80">80dp</dimen>
 </resources>
