--- a/app/src/main/res/layout/activity_mobile_detail.xml
+++ b/app/src/main/res/layout/activity_mobile_detail.xml
@@ -11,6 +11,7 @@
         layout="@layout/toolbar" />
 
     <android.support.v4.widget.NestedScrollView
+        android:id="@+id/rootView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fillViewport="true">
@@ -26,7 +27,8 @@
                 android:layout_height="0dp"
                 android:layout_weight="3.5">
 
-                <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
+                <android.support.v4.view.ViewPager
+                    xmlns:android="http://schemas.android.com/apk/res/android"
                     android:id="@+id/pager"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent" />
